--- a/src/pages/Customer.module.css
+++ b/src/pages/Customer.module.css
@@ -575,10 +575,9 @@
 }
 .div20 {
   position: absolute;
-  top: -2px;
-  left: 0;
+  top: -4px;
+  left: 26px;
   font-weight: 600;
-  white-space: pre-wrap;
   display: inline-block;
   width: 60px;
   height: 24px;
