--- a/src/pages/Customer1.module.css
+++ b/src/pages/Customer1.module.css
@@ -9,11 +9,6 @@
   width: 1262px;
   height: 821px;
 }
-.frameItem {
-  position: absolute;
-  top: 11px;
-  left: 93px;
-}
 .container,
 .group,
 .parent {
@@ -47,7 +42,7 @@
   align-items: flex-start;
   justify-content: flex-start;
 }
-.frameInner {
+.frameItem {
   position: absolute;
   top: 0;
   left: 0;
@@ -349,37 +344,29 @@
   max-height: 100%;
 }
 .image3Icon {
-  position: absolute;
   top: 18px;
   left: 191px;
   width: 100px;
   height: 55px;
   object-fit: cover;
 }
+.c,
+.image3Icon,
 .tabTrn {
   position: absolute;
+}
+.tabTrn {
   top: 0;
   left: 0;
   width: 1512px;
   height: 94px;
   font-size: var(--font-size-13xl);
 }
-.c,
-.div9 {
-  position: absolute;
+.c {
   top: 98px;
   left: 240px;
   font-size: var(--font-size-5xl);
   font-weight: 600;
-}
-.div9 {
-  top: 107px;
-  left: 1342px;
-  font-size: var(--font-size-mini);
-  color: var(--color-white);
-  display: inline-block;
-  width: 142px;
-  height: 27px;
 }
 .customer2Child,
 .image1 {
@@ -397,7 +384,7 @@
   width: 1239px;
   height: 60px;
 }
-.div10 {
+.div9 {
   position: absolute;
   top: 221px;
   left: 489px;
@@ -416,7 +403,7 @@
   transform: rotate(180deg);
   transform-origin: 0 0;
 }
-.div11,
+.div10,
 .id {
   position: absolute;
   display: inline-block;
@@ -429,19 +416,19 @@
   width: 118px;
   height: 37px;
 }
-.div11 {
+.div10 {
   top: 223px;
   left: 600px;
   width: 199px;
   height: 19px;
 }
+.div10,
 .div11,
-.div12,
-.div13 {
+.div12 {
   font-size: var(--font-size-xl);
   font-weight: 600;
 }
-.div12 {
+.div11 {
   position: absolute;
   top: 226px;
   left: 1361px;
@@ -450,19 +437,19 @@
   width: 120px;
   height: 29px;
 }
-.div13 {
+.div12 {
   top: 223px;
   left: 860px;
   width: 129px;
   height: 23px;
 }
+.div12,
 .div13,
-.div14,
-.div15 {
+.div14 {
   position: absolute;
   display: inline-block;
 }
-.div14 {
+.div13 {
   top: 224px;
   left: 1200px;
   font-size: var(--font-size-xl);
@@ -470,7 +457,7 @@
   width: 135px;
   height: 36px;
 }
-.div15 {
+.div14 {
   top: 0;
   left: 0;
   font-weight: 500;
@@ -488,7 +475,7 @@
   top: 1px;
   left: 1120px;
 }
-.div17,
+.div16,
 .parent4,
 .parent7 {
   position: absolute;
@@ -497,11 +484,11 @@
   width: 1180px;
   height: 38px;
 }
-.div17,
+.div16,
 .parent7 {
   top: 398px;
 }
-.div17 {
+.div16 {
   top: 0;
   left: 0;
   font-weight: 500;
@@ -510,8 +497,8 @@
   width: 929px;
   height: 35px;
 }
+.div17,
 .div18,
-.div19,
 .parent10 {
   position: absolute;
   top: 525px;
@@ -519,8 +506,8 @@
   width: 1180px;
   height: 38px;
 }
-.div18,
-.div19 {
+.div17,
+.div18 {
   top: 128px;
   left: 0;
   font-weight: 500;
@@ -529,7 +516,7 @@
   width: 928px;
   height: 35px;
 }
-.div19 {
+.div18 {
   top: 0;
   left: 1px;
   width: 913px;
@@ -561,12 +548,11 @@
   color: var(--color-black);
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
-.div20 {
+.div19 {
   position: absolute;
   top: -4px;
-  left: 0;
+  left: 27px;
   font-weight: 600;
-  white-space: pre-wrap;
   display: inline-block;
   width: 60px;
   height: 24px;
@@ -590,7 +576,7 @@
   left: -40%;
   object-fit: contain;
 }
-.div21,
+.div20,
 .frameDiv {
   position: absolute;
   top: 909px;
@@ -599,7 +585,7 @@
   height: 24px;
   font-size: var(--font-size-5xl);
 }
-.div21 {
+.div20 {
   top: 222px;
   left: 1075px;
   font-size: var(--font-size-xl);
@@ -636,21 +622,21 @@
   top: 646px;
   left: 1372px;
 }
-.frameChild4,
-.frameChild5 {
+.frameChild3,
+.frameChild4 {
   position: absolute;
   left: 0;
   box-sizing: border-box;
   width: 600px;
 }
-.frameChild4 {
+.frameChild3 {
   top: 0;
   border-radius: var(--br-xl);
   background-color: var(--color-white);
   border: 2px solid var(--color-darkgray-300);
   height: 723px;
 }
-.frameChild5 {
+.frameChild4 {
   top: 1px;
   border-radius: var(--br-xl) var(--br-xl) 0 0;
   background-color: var(--color-gainsboro-100);
@@ -659,9 +645,9 @@
   border-left: 3px solid var(--color-darkgray-300);
   height: 69px;
 }
+.frameChild5,
 .frameChild6,
 .frameChild7,
-.frameChild8,
 .rectangleInput {
   border: 3px solid var(--color-darkgray-400);
   outline: 0;
@@ -674,27 +660,27 @@
   width: 420px;
   height: 60px;
 }
+.frameChild5,
 .frameChild6,
-.frameChild7,
-.frameChild8 {
+.frameChild7 {
   top: 281px;
 }
-.frameChild7,
-.frameChild8 {
+.frameChild6,
+.frameChild7 {
   top: 363px;
 }
-.frameChild8 {
+.frameChild7 {
   top: 441px;
 }
 .id2 {
   font-size: var(--font-size-lg);
   font-weight: 500;
 }
+.div24,
 .div25,
 .div26,
 .div27,
 .div28,
-.div29,
 .id1 {
   position: absolute;
   display: inline-block;
@@ -706,40 +692,40 @@
   left: 125px;
   font-size: var(--font-size-xl);
 }
+.div24,
 .div25,
 .div26,
 .div27,
-.div28,
-.div29 {
+.div28 {
   top: 133px;
   left: 113px;
   font-weight: 500;
 }
+.div25,
 .div26,
 .div27,
-.div28,
-.div29 {
+.div28 {
   top: 297px;
   left: 116px;
 }
+.div26,
 .div27,
-.div28,
-.div29 {
+.div28 {
   top: 379px;
   left: 18px;
   width: 157px;
 }
-.div28,
-.div29 {
+.div27,
+.div28 {
   top: 453px;
   left: 46px;
   width: 131px;
 }
-.div29 {
+.div28 {
   top: 541px;
   left: 85px;
 }
-.frameChild9,
+.frameChild8,
 .icon {
   position: absolute;
   top: 128px;
@@ -759,13 +745,16 @@
   max-height: 100%;
   cursor: pointer;
 }
-.b,
 .xCircleContained {
   position: absolute;
   top: 10px;
   left: 556px;
   width: 24px;
   height: 24px;
+}
+.b,
+.frameChild9 {
+  position: absolute;
 }
 .b {
   top: 17px;
@@ -775,8 +764,7 @@
   width: 358px;
   height: 31px;
 }
-.frameChild10 {
-  position: absolute;
+.frameChild9 {
   top: 624px;
   left: 250px;
   border-radius: var(--br-mini);
@@ -786,11 +774,10 @@
 }
 .b1 {
   position: absolute;
-  top: 639px;
-  left: 245px;
+  top: 637px;
+  left: 283px;
   font-size: var(--font-size-xl);
   color: var(--color-white);
-  white-space: pre-wrap;
   cursor: pointer;
 }
 .wrapper4,
@@ -804,7 +791,7 @@
 }
 .rectangleParent4 {
   position: absolute;
-  top: 185px;
+  top: 141px;
   left: 260px;
   width: 600px;
   height: 723px;
