--- a/src/pages/Customer2.module.css
+++ b/src/pages/Customer2.module.css
@@ -581,10 +581,9 @@
 }
 .div20 {
   position: absolute;
-  top: -3px;
-  left: 0;
+  top: -4px;
+  left: 27px;
   font-weight: 600;
-  white-space: pre-wrap;
   display: inline-block;
   width: 60px;
   height: 24px;
