--- a/src/pages/Report2.module.css
+++ b/src/pages/Report2.module.css
@@ -480,12 +480,11 @@
 .div10,
 .text {
   position: absolute;
-  white-space: pre-wrap;
   display: inline-block;
 }
 .div10 {
   top: -128px;
-  left: 152px;
+  left: 197px;
   font-size: var(--font-size-5xl);
   font-weight: 600;
   width: 154px;
@@ -495,6 +494,7 @@
   top: 46px;
   left: 313px;
   font-weight: 500;
+  white-space: pre-wrap;
   width: 136px;
   height: 22px;
 }
@@ -534,35 +534,34 @@
   height: 22px;
 }
 .div14 {
-  top: 0;
-  left: 317px;
+  top: 1px;
+  left: 337px;
 }
 .div14,
 .div15,
 .div16,
 .div17 {
   position: absolute;
-  white-space: pre-wrap;
   display: inline-block;
   height: 22px;
 }
 .div15 {
-  top: 56px;
-  left: 672px;
+  top: 57px;
+  left: 698px;
   font-size: var(--font-size-base);
   font-weight: 600;
   width: 119px;
 }
 .div16,
 .div17 {
-  top: 2px;
-  left: 481px;
+  top: 1px;
+  left: 508px;
   font-weight: 500;
   width: 136px;
 }
 .div17 {
-  top: -127px;
-  left: 306px;
+  top: -128px;
+  left: 316px;
   font-size: var(--font-size-5xl);
   font-weight: 600;
   width: 154px;
@@ -618,8 +617,8 @@
 }
 .div20,
 .text4 {
-  top: 1px;
-  left: 646px;
+  top: 0;
+  left: 676px;
   white-space: pre-wrap;
   width: 136px;
 }
@@ -685,14 +684,12 @@
 }
 .div22 {
   top: 153px;
-  left: 382px;
+  left: 423px;
   font-weight: 600;
-  white-space: pre-wrap;
   width: 254px;
   height: 37px;
 }
-.expand02Icon,
-.x1 {
+.expand02Icon {
   position: absolute;
   top: 37px;
   left: 916px;
@@ -700,94 +697,103 @@
   height: 20px;
   cursor: pointer;
 }
+.div23,
+.div24,
+.div25,
+.x1 {
+  position: absolute;
+  display: inline-block;
+}
 .x1 {
   top: 693px;
-  left: 120px;
+  left: 158px;
   font-size: var(--font-size-lg);
   font-weight: 500;
   color: var(--color-white);
-  white-space: pre-wrap;
-  display: inline-block;
   width: 130px;
   height: 28px;
+  cursor: pointer;
 }
 .div23,
-.div24 {
-  font-weight: 500;
-  width: 81px;
+.div24,
+.div25 {
+  height: 15px;
 }
 .div23 {
-  position: absolute;
   top: 280px;
   left: 455px;
-  display: inline-block;
-  height: 15px;
-}
-.div24 {
-  top: 281px;
-  left: 620px;
-}
-.div24,
-.div25,
-.div26,
-.div27 {
-  position: absolute;
-  display: inline-block;
-  height: 15px;
-}
-.div25 {
-  top: 281px;
-  left: 778px;
   font-weight: 500;
-  width: 94px;
-}
-.div26,
-.div27 {
-  left: 301px;
   width: 81px;
 }
-.div26 {
+.div24,
+.div25 {
   top: 281px;
+}
+.div24 {
+  left: 620px;
   font-weight: 500;
-  white-space: pre-wrap;
+  width: 81px;
 }
-.div27 {
-  top: 323px;
+.div25 {
+  left: 787px;
+  width: 94px;
 }
-.div27,
+.div25,
+.div26,
 .span1 {
   font-weight: 500;
+}
+.div26 {
+  position: absolute;
+  top: 323px;
+  left: 337px;
+  display: inline-block;
+  width: 81px;
+  height: 15px;
+}
+.span1 {
   white-space: pre-wrap;
 }
 .span2 {
   font-weight: 600;
 }
+.div27,
 .div28,
 .div29,
 .div30,
 .div31 {
   position: absolute;
-  top: 364px;
-  left: 301px;
   display: inline-block;
   width: 81px;
   height: 15px;
 }
+.div27 {
+  top: 364px;
+  left: 297px;
+  font-size: var(--font-size-lg);
+}
+.div28,
 .div29,
 .div30,
 .div31 {
-  top: 321px;
-  left: 445px;
+  top: 281px;
+  left: 302px;
+}
+.div29,
+.div30,
+.div31 {
+  top: 320px;
+  left: 456px;
   font-weight: 500;
-  white-space: pre-wrap;
 }
 .div30,
 .div31 {
-  left: 758px;
+  top: 321px;
+  left: 787px;
   width: 109px;
 }
 .div31 {
-  left: 620px;
+  left: 636px;
   width: 81px;
 }
 .rectangleGroup {
