--- a/src/pages/Report3.module.css
+++ b/src/pages/Report3.module.css
@@ -389,9 +389,6 @@
   width: 770px;
   height: 52px;
 }
-.div14,
-.rectangleContainer,
-.rectangleGroup,
 .rectangleParent {
   position: absolute;
   top: 159px;
@@ -399,30 +396,24 @@
   width: 773px;
   height: 58px;
 }
-.div14,
-.rectangleContainer,
-.rectangleGroup {
-  top: 278px;
-}
-.div14,
-.rectangleContainer {
-  top: 398px;
-}
-.div14 {
-  top: -1px;
-  left: 3px;
-  font-weight: 600;
-  display: inline-block;
-  width: 770px;
-  height: 52px;
-}
 .frameDiv,
+.rectangleContainer,
+.rectangleGroup,
 .rectangleParent1 {
   position: absolute;
-  top: 513px;
+  top: 278px;
   left: 32px;
   width: 773px;
   height: 58px;
+}
+.frameDiv,
+.rectangleContainer,
+.rectangleParent1 {
+  top: 398px;
+}
+.frameDiv,
+.rectangleParent1 {
+  top: 513px;
 }
 .rectangleParent1 {
   top: 633px;
